--- a/views/register.jade
+++ b/views/register.jade
@@ -4,7 +4,7 @@ block body
   h1 Register!
   
   form(novalidate method="POST" action="/users/new" name="registrationForm")
-    .form-group(ng-class="{ 'has-error': registrationForm.username.$error }")
+    .form-group(ng-class="{ 'has-error': !registrationForm.username.$valid }")
       label(for="username") Username
       input.form-control(type="text" required name="username" ng-model="username" unique-username)
       br
@@ -14,7 +14,6 @@ block body
       label(for="email") Email
       input.form-control(type="email" required name="email" ng-model="email")
     .form-group(ng-class="{ 'has-error': (registrationForm.password.$dirty || registrationForm.password_confirm.$dirty) && (registrationForm.password.$modelValue !== registrationForm.password_confirm.$modelValue) }")
-      p {{ registrationForm.password }}
       label(for="password") Password
       input.form-control(type="password" required name="password" ng-model="password")
       label(for="password_confirm") Confirm Password
