--- a/views/register.jade
+++ b/views/register.jade
@@ -6,7 +6,8 @@ block body
   form(novalidate method="POST" action="/users/new" name="registrationForm")
     .form-group(ng-class="{ 'has-error': !registrationForm.username.$valid }")
       label(for="username") Username
-      input.form-control(type="text" required name="username" ng-model="username" unique-username)
+      input.form-control(type="text" required name="username" ng-model="username"
+        ng-model-options="{ debounce: 2000 }" unique-username)
       br
       div.alert.alert-warning(ng-hide="registrationForm.username.$valid")
         p(ng-show="registrationForm.username.$error.required") Username is required.
