--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,3 +11,7 @@ html
     .container
       .well
         block body
+      if user
+        a(href="/logout") Logout
+      else
+        a(href="/login") Login
