--- a/views/register.jade
+++ b/views/register.jade
@@ -2,12 +2,16 @@ extends ./layout.jade
 
 block body
   div(ng-controller="RegistrationFormController as vm")
-    form(method="POST" action="/users/new" name="vm.registration")
+    form(method="POST" action="/users/new" name="vm.registration" novalidate)
       .form-group
         label(for="username") Username
-        input.form-control(type="text" name="username" ng-model="vm.user.username" required)
+        input.form-control(type="text" name="username" ng-model="vm.user.username" required unique-username)
+      .form-group(ng-class="{ 'has-error': vm.registration.email.$invalid }")
         label(for="email") Email Address
         input.form-control(type="email" name="email" ng-model="vm.user.email" required)
+        div(ng-show="vm.registration.email.$error.email")
+          p Must be an email address.
+      .form-group
         label(for="password") Password
         input.form-control(type="password" name="password" ng-model="vm.user.password" required)
         label(for="password_confirm") Confirm Password
