Angular component, part the first

--- a/views/partials/todos.jade
+++ b/views/partials/todos.jade
@@ -1,4 +1,1 @@
-ul
-  li(ng-repeat="todo in vm.todoList"
-     ng-class="{ 'text-success': todo.completedAt }")
-     a(href="#/todos/{{ todo.id }}") {{ todo.title }}
+todo-list(tasks="vm.todoList")
