--- a/views/partials/addTodo.jade
+++ b/views/partials/addTodo.jade
@@ -1,5 +1,5 @@
-.form-group
-  label(for="todo") To do
-  input.form-control(type="text" name="todo" ng-model="vm.newTodo")
-  input.form-control(type="text" name="otherField")
-button.btn.btn-default(ng-click="vm.addTodo(vm.newTodo)") Add Todo
+.form-inline
+  .form-group
+    label(for="todo") To do
+    input.form-control(type="text" name="todo" ng-model="$ctrl.newTodo")
+  button.btn.btn-default(ng-click="$ctrl.addTodo($ctrl.newTodo)") Add Todo
